# gitn

./: .gitignore  CMakeLists.txt  README.md
include/: GitBlob.h  GitObject.h  GitRepository.h  GitUtils.h
src/: GitBlob.cpp  GitRepository.cpp  GitUtils.cpp  main.cpp
